# STIRLoader

./: README.md  STIRLoader.py  pyproject.toml
STIRLoader/: STIRLoader.py
scripts/: randomplay.sh
