[project]
name = "STIRLoader"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy==1.23.5",
    "torch",
    "opencv-contrib-python==4.5.5.64",
    "matplotlib",
]
                                                                                

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
